bbn-deploy supports custom per-node JVM options